freedreno: dEQP-GLES3.functional.fbo.msaa.4_samples.r16f flakiness in CI
This test recently started showing up at as a many-times-a-day spurious failure. First email I see about it is Mar 19 (db5cc6a7)
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
This test recently started showing up at as a many-times-a-day spurious failure. First email I see about it is Mar 19 (db5cc6a7)